<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_event"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:cardCornerRadius="@dimen/margin_five"
        app:cardUseCompatPadding="true"
        android:padding="@dimen/padding_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/heading_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_heading"
                android:textSize="@dimen/textsize_twelve"
                android:textColor="@color/black"
                android:layout_margin="@dimen/margin_five"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">
                <TextView
                    android:id="@+id/tv_requested"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/requested_by"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/margin_five"
                    android:textSize="@dimen/textsize_ten"/>
                <TextView
                    android:id="@+id/tv_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="1"
                    android:maxLength="27"
                    android:text="@string/url"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_ten"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginRight="@dimen/margin_five"
                android:padding="@dimen/padding_five"
                android:background="@color/light_gray"
                android:textSize="@dimen/textsize_twelve"/>
            <LinearLayout
                android:id="@+id/ll_bd_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_five"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_person_icon"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_five"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/yourWish"
                        android:inputType="textMultiLine"
                        android:textSize="@dimen/textsize_twelve"
                        android:paddingLeft="@dimen/padding_five"
                        android:background="@drawable/edittext_rect_bg"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/submit"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>