<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.attendance.AttendanceFragment">

    <Spinner
        android:id="@+id/spin_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_ten"
        android:background="@drawable/edittext_rect_bg"

        android:padding="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spin_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginRight="@dimen/margin_ten"
        android:background="@drawable/edittext_rect_bg"

        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_month" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginRight="@dimen/margin_ten"
        android:layout_marginTop="@dimen/margin_twenty"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_year" />

    <LinearLayout
        android:id="@+id/ll_part1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_twenty"
        android:layout_marginLeft="@dimen/margin_ten"
        android:layout_marginRight="@dimen/margin_ten"
        android:background="@drawable/gray_background_design">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/button">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:text="@string/no"
                android:paddingLeft="@dimen/padding_five"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:paddingLeft="@dimen/padding_five"
                android:textSize="@dimen/textsize_twelve"
                android:text="@string/CheckIn"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/textsize_twelve"
                android:paddingLeft="@dimen/padding_five"
                android:text="@string/CheckOut"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight=".6"
                android:paddingLeft="@dimen/padding_five"
                android:textSize="@dimen/textsize_twelve"
                android:text="@string/comment"
                android:textColor="@color/white"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_attendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>